# afxdl

./: .pre-commit-config.yaml  Dockerfile  afxdl.html  cspell.json  index.html  mise.toml  pyproject.toml  search.js
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  test.yml
afxdl/: __init__.py  download.html  download.py  main.html  main.py  models.html  parse.html  parse.py
tests/: test_afxdl.py
