[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "afxdl"
version = "0.2.1"
description = "Download audio from aphextwin.warp.net"
readme = "README.md"
keywords = [
  "aphextwin",
  "cli",
  "commandline-tool",
  "downloader",
  "id3-tag",
  "mp3",
  "warp",
]
license = { text = "MIT" }
authors = [
  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
]
requires-python = ">=3.12,<4"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio",
  "Typing :: Typed",
]
dependencies = [
  "beautifulsoup4>=4.12.3,<5",
  "mutagen>=1.47,<2",
  "pydantic>=2.10.5,<3",
  "requests>=2.32.3,<3",
]
urls.Repository = "https://github.com/eggplants/afxdl"
scripts.afxdl = "afxdl.main:main"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "afxdl" },
]

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.7,<5.0"
pytest = "^8.1.1"
pytest-cov = ">=5,<7"
taskipy = "^1.12.2"
black = "^24.3.0"
ruff = ">=0.5.0,<0.9.0"
types-beautifulsoup4 = "^4.12.0.20240229"
types-requests = "^2.31.0.20240311"
mypy = "^1.9.0"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0"

[tool.black]
target-version = [
  "py312",
]

[tool.ruff]
lint.select = [
  "ALL",
]
lint.ignore = [
  "D211", # No blank lines allowed before class docstring
  "D213", # Multi-line docstring summary should start at the second line
]
lint.per-file-ignores."main.py" = [
  "T201", # `print` found
]
lint.per-file-ignores."tests/*.py" = [
  "D",
  "S101", # Use of assert detected
]
lint.pydocstyle.convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true

# much harder
# disallow_any_decorated = true
# disallow_any_explicit = true
# disallow_any_expr = true
disallow_any_unimported = true
implicit_optional = false      # for mypy<1.0
strict_concatenate = true
warn_unreachable = true

# message
pretty = true
show_column_numbers = true
show_error_context = true

plugins = [
  "pydantic.mypy",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pydantic-mypy]
# frozen = true
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.taskipy.tasks]
test = "pytest --cov=afxdl --cov-report=term"
"test:ci" = "task test --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
